# Rec

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
data/: Animes-Dataset-preprocessed.csv
src/: _init.ipynb  data_cleaning.py  data_scraping.py  database.py  db_setup.ipynb  db_setup.py  logger.py  models.py
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
tests/: test_models.py  test_recommendations.py  test_routes.py
